--- a/ct-hw-w3-d2-python-exercises.ipynb
+++ b/ct-hw-w3-d2-python-exercises.ipynb
@@ -163,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import vh_modules"
+    "import vh_modules as vh"
    ]
   },
   {
@@ -179,23 +179,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'circle_area' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[36], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mprint\u001b[39m(circle_area(\u001b[39m7\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'circle_area' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "153.93804002589985\n"
      ]
     }
    ],
    "source": [
-    "print(circle_area(7))"
+    "print(vh.circle_area(7))"
    ]
   },
   {
@@ -207,60 +203,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4]\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "        self.first_name = first_name\n",
-      "        self.last_name = last_name\n",
-      "        self.job_title = job_title\n",
-      "        self.salary = salary\n",
-      "        self.email = email\n"
+      "5.0\n"
      ]
     }
    ],
    "source": [
-    "# Sandbox\n",
-    "\n",
-    "def print_init(string_of_things):\n",
-    "    things = string_of_things.split(\", \")\n",
-    "    for attribute in things:\n",
-    "        print(\" \"*8 + f\"self.{attribute} = {attribute}\")\n",
-    "\n",
-    "print_init(\"first_name, last_name, job_title, salary, email\")"
+    "print(vh.calculate_hypotenuse(3,4))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
