--- a/ct-hw-w3-d2-python-exercises.ipynb
+++ b/ct-hw-w3-d2-python-exercises.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,10 @@
     "        self.job_title = job_title\n",
     "        self.salary = salary\n",
     "        self.email = email\n",
-    "        \n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"{self.first_name} {self.last_name}\"\n",
+    "    \n",
     "    def apply_raise(self):\n",
     "        self.salary *= self.raise_amount\n"
    ]
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,19 +61,21 @@
     "        self.phone_number = phone_number\n",
     "\n",
     "    def send_follow_up_email(self, customer_name):\n",
-    "        print(\n",
-    "            f\"\"\"\n",
-    "            Dear {customer_name}, Thank you for your interest in our product.\n",
-    "            Please let me know if you have any questions.\n",
-    "            My email is {self.email} or my phone number is {self.phone_number}.\n",
-    "            Thanks, {self.first_name} {self.last_name}\n",
-    "            \"\"\"\n",
+    "        print(     \n",
+    "f\"\"\"\n",
+    "Dear {customer_name}, Thank you for your interest in our product.\n",
+    "Please let me know if you have any questions.\n",
+    "My email is {self.email} or my phone number is {self.phone_number}.\n",
+    "Thanks, {self}\n",
+    "\"\"\"\n",
     "        )\n",
+    "\n",
+    "\n",
     "\n",
     "class Development(Employee):\n",
     "\n",
     "    def code(self):\n",
-    "        print(f\"{self.first_name} {self.last_name} is writing code\")\n",
+    "        print(f\"{self} is writing code\")\n",
     "\n"
    ]
   },
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -93,17 +98,17 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "            Dear Mike O'Neil, Thank you for your interest in our product.\n",
-      "            Please let me know if you have any questions.\n",
-      "            My email is speedy.justice@gmail.com or my phone number is 3219116969.\n",
-      "            Thanks, Soul Goodman\n",
-      "            \n",
+      "Dear Mike O'Neil, Thank you for your interest in our product.\n",
+      "Please let me know if you have any questions.\n",
+      "My email is speedy.justice@gmail.com or my phone number is 3219116969.\n",
+      "Thanks, Soul Goodman\n",
       "\n",
-      "            Dear Hannah Stern, Thank you for your interest in our product.\n",
-      "            Please let me know if you have any questions.\n",
-      "            My email is speedy.justice@gmail.com or my phone number is 3219116969.\n",
-      "            Thanks, Soul Goodman\n",
-      "            \n"
+      "\n",
+      "Dear Hannah Stern, Thank you for your interest in our product.\n",
+      "Please let me know if you have any questions.\n",
+      "My email is speedy.justice@gmail.com or my phone number is 3219116969.\n",
+      "Thanks, Soul Goodman\n",
+      "\n"
      ]
     }
    ],
@@ -125,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,19 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "153.93804002589985\n"
+      "314.1592653589793\n"
      ]
     }
    ],
    "source": [
-    "print(vh.circle_area(7))"
+    "print(vh.circle_area(10))"
    ]
   },
   {
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +225,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.141592653589793"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import of the import !!!\n",
+    "vh.pi"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Michael O'Neil\""
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
