--- a/ct-hw-w3-d2-python-exercises.ipynb
+++ b/ct-hw-w3-d2-python-exercises.ipynb
@@ -278,19 +278,16 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.141592653589793\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__spec__',\n",
-       " 'print_init',\n",
-       " 'time',\n",
-       " 'time_this_func']"
+       "['quit', 'sales_guy_1', 'vh', 'vh_module', 'vh_modules']"
       ]
      },
      "execution_count": 10,
@@ -306,8 +303,8 @@
     "Utilizing __all__\n",
     "in __init__.py\n",
     "\"\"\"\n",
-    "\n",
-    "dir(vh_module)"
+    "print(geometry.pi)\n",
+    "dir()[-5:]"
    ]
   },
   {
